2009-07-26  Hedayat Vatankhah  <hedayat@grad.com>

	* CMakeLists.txt: 
	- try to find and copy all thirdparty dlls in the binary package's bin/ 
	  directory.
	- set RCSSSERVER3D_DIR environment variable when using NSIS installer
	- creating simspark.bat file in windows (by the installer)

2009-07-24  Marian Buchta  <marian.buchta@gmail.com>

	* cmake/FindBoost.cmake
	* cmake/FindFreetype.cmake
	- add missing macros (Windows needed)

2009-06-24  Hedayat Vatankhah  <hedayat@grad.com>

	* NEWS: 
	* RELEASE:
	- prepared for 0.6.2 release
	 
	* simspark/main.cpp: 
	- simspark.rb path should be given using "--script-path" option.
	- add the new option to --help output

2009-06-16  Sander van Dijk  <sgvandijk@gmail.com>

  * simspark/main.cpp
  - simspark can take command line argument specifying the rb script to run
  (Simon Raffeiner)
  
  * plugin/soccermonitor/soccerinput.cpp
  * plugin/soccermonitor/soccerinput.h
  * rcssmonitor3d/soccerbindings.rb
  - new soccer input command to give kick-off to the team on the right (bound
  to 'j') (Simon Raffeiner)
  
2009-06-15  Sander van Dijk  <sgvandijk@gmail.com>

  * plugin/soccer/ballstateaspect/ballstateaspect.h
  * plugin/soccer/ballstateaspect/ballstateaspect.cpp
  * data/rsg/agent/nao/goal.rsg
  - change goal and out-of-field checks to only accept when ball is
  completely over the line
  
2009-04-30  Sander van Dijk  <sgvandijk@gmail.com>

	* rcssmonitor3d/rcssmonitor3d.rb
	- set camera parameters to those used in internal monitor
	
	* plugin/soccermonitor/soccerinputlogplayer.h
	* plugin/soccermonitor/soccerinputlogplayer.cpp
	* rcssmonitor3d/soccerbindings.rb
	- add camera controls to external monitor

2009-04-08  Hedayat Vatankhah  <hedayat@grad.com>

	* plugin/soccer/beameffector/beamaction.h (BeamAction): 
	- fixed const function declaration
	
	* plugin/soccer/soccerbase/soccerbase.cpp (SoccerBase::MoveAgent): 
	- removed useless statements
	
	* plugin/soccer/kickeffector/kickaction.h: 