@@ -1,3 +1,8 @@
+2009-07-27  Hedayat Vatankhah  <hedayat@grad.com>
+
+	* lib/salt/fileclasses.cpp (RFile::BundlePath): 
+	- use SPARK_DIR environment variable for BundlePath if available
+
 2009-07-26  Hedayat Vatankhah  <hedayat@grad.com>
 
 	* CMakeLists.txt: 
