@@ -1,3 +1,9 @@
+2009-07-27  Hedayat Vatankhah  <hedayat@grad.com>
+
+	* CMakeLists.txt: 
+	- create .cmd files for executables in Windows, and remove them on 
+	  uninstallation
+
 2009-07-26  Hedayat Vatankhah  <hedayat@grad.com>
 
 	* CMakeLists.txt: 
